# emission

./: README.md  db.py  main.py  pyproject.toml
Calorie Lookup/: Sequence.xaml  fetch.py  project.json  send.py
static/scripts/: chatbot.js  dashboard.js  gcloud.js  index.js  leaderboard.js  login.js  map.js  profile.js
static/styles/: chatbot.css  global.css  index.css  information.css  landing.css  leaderboard.css  login.css  map.css  profile.css
templates/: base.html  chatbot.html  index.html  information.html  landing.html  leaderboard.html  login.html  map.html  profile.html  search.html  settings.html  test.html
templates/partials/: carousel.html  full navbar.html  header.html  include js.html  navbar.html
